--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.14",
     "@docusaurus/preset-classic": "^2.0.0-beta.14",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mdx-js/react": "^1.6.21",
+    "@mui/material": "^5.4.2",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lottie": "^1.2.3",
+    "react-player": "^2.9.0",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
