Add images for home page

--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@mui/material": "^5.4.2",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
+    "express": "^4.17.3",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
     "react-player": "^2.9.0",
-    "url-loader": "^4.1.1"
+    "universal-analytics": "^0.5.3",
+    "url-loader": "^4.1.1",
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
