--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -4,10 +4,10 @@ name: Lint
 on:
   push:
     branches:
-      - "**"
+      - '**'
   pull_request:
     branches:
-      - "**"
+      - '**'
 
 jobs:
   run-linters:
@@ -23,16 +23,21 @@ jobs:
         with:
           node-version: 16
 
-      # Prettier must be in `package.json`
+      # Prettier and ESLint must be in `package.json`
       - name: Install Node.js dependencies
         run: yarn install --frozen-lockfile
+
+      - name: Run ESLint
+        uses: wearerequired/lint-action@v1
+        with:
+          eslint: true
 
       - name: Run Prettier
         uses: wearerequired/lint-action@v1
         with:
           prettier: true
-          prettier_extensions: "css,html,js,json,jsx,md,sass,scss,ts,tsx,vue"
+          prettier_extensions: 'css,html,js,json,jsx,md,sass,scss,ts,tsx,vue'
           auto_fix: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          git_email: "fairdataihub@gmail.com"
-          git_name: "fairdataihub-bot"
+          git_email: 'fairdataihub@gmail.com'
+          git_name: 'fairdataihub-bot'
