--- a/package.json
+++ b/package.json
@@ -46,9 +46,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "autoprefixer": "^10.4.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.2",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.0",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.0.9"
   }
 }
