--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "^7.29.2",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.0.9"
   }
