--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.20",
@@ -34,6 +39,27 @@
     "url-loader": "4.1.1",
     "uuid": "8.3.2"
   },
+  "devDependencies": {
+    "@babel/eslint-parser": "7.17.0",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "autoprefixer": "10.4.7",
+    "babel-eslint": "10.1.0",
+    "devmoji": "^2.3.0",
+    "eslint": "8.15.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
+    "postcss": "8.4.13",
+    "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "0.1.10",
+    "pretty-quick": "3.1.3",
+    "tailwindcss": "3.0.24"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
@@ -45,21 +71,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "7.17.0",
-    "autoprefixer": "10.4.7",
-    "babel-eslint": "10.1.0",
-    "eslint": "8.15.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
-    "postcss": "8.4.13",
-    "prettier": "2.6.2",
-    "prettier-plugin-tailwindcss": "0.1.10",
-    "pretty-quick": "3.1.3",
-    "tailwindcss": "3.0.24"
   }
 }
