--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           prettier: true
           prettier_extensions: 'css,html,js,json,jsx,md,sass,scss,ts,tsx,vue'
-          commit_message: "style: 🎨 code style issues with ${linter}"
+          commit_message: "style: 🎨 fix code style issues with ${linter}"
           auto_fix: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_email: 'fairdataihub@gmail.com'
