--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,13 @@
 {
   "extends": ["config:base"],
-  "semanticCommits": true
+  "semanticCommits": true,
+  "stabilityDays": 3,
+  "prCreation": "not-pending",
+  "labels": ["type: dependencies"],
+  "packageRules": [
+    {
+      "packageNames": ["node"],
+      "enabled": false
+    }
+  ]
 }
