--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint --ignore-path .gitignore \"./**/*.+(ts|js|jsx|tsx)\"",
+    "format": "prettier --ignore-path .gitignore \"./**/*.+(ts|js|jsx|tsx|md)\" --write",
+    "semantic-release": "semantic-release"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx,css,md}": "prettier --write"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.21",
@@ -43,6 +46,10 @@
     "@babel/eslint-parser": "7.18.2",
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/github": "^8.0.4",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "autoprefixer": "10.4.7",
     "babel-eslint": "10.1.0",
     "devmoji": "2.3.0",
@@ -58,6 +65,7 @@
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "0.1.11",
     "pretty-quick": "3.1.3",
+    "semantic-release": "^19.0.2",
     "tailwindcss": "3.0.24"
   },
   "browserslist": {
