--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@commitlint/config-conventional": "17.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.4",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "autoprefixer": "10.4.7",
