--- a/.releaserc.json
+++ b/.releaserc.json
@@ -19,6 +19,12 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
     "@semantic-release/github",
     "@semantic-release/git"
   ]
