--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.4",
+    "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "autoprefixer": "10.4.7",
     "babel-eslint": "10.1.0",
