--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "4.18.1",
     "file-loader": "6.2.0",
     "prism-react-renderer": "1.3.5",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-cookie": "4.1.1",
     "react-dom": "18.2.0",
