--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "*.{js,jsx,css,md}": "prettier --write"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-rc.1",
-    "@docusaurus/preset-classic": "2.0.0-rc.1",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "@mdx-js/react": "1.6.22",
@@ -31,6 +31,7 @@
     "@svgr/webpack": "6.3.1",
     "axios": "0.27.2",
     "clsx": "1.2.1",
+    "docusaurus-plugin-umami": "^2.0.0",
     "express": "4.18.1",
     "file-loader": "6.2.0",
     "prism-react-renderer": "1.3.5",
@@ -47,6 +48,7 @@
     "@babel/eslint-parser": "7.18.9",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
+    "@fairdataihub/config": "^1.2.0",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
