--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@iconify/react": "^3.2.2",
     "@mdx-js/react": "1.6.22",
     "@mui/material": "5.10.3",
+    "@notionhq/client": "^2.1.1",
     "@svgr/webpack": "6.3.1",
     "axios": "0.27.2",
     "clsx": "1.2.1",
